--- a/views/index.jade
+++ b/views/index.jade
@@ -7,8 +7,8 @@ html(lang='en')
     script
       $(document).ready(function () { 
         //Crockford compliance! Define all the need variables here
-        var socket;
-            
+        var socket, connected, trying, tryConnect;
+
         //- Setup the socket library. The rememberTransport and tryTransportsOnConnectTimeout on neccessary
         //- because the defaults will cause some browsers to degrade to crappy transports when they are 
         //- disconnected (think suspended laptop) and will subsequently stick on said crappy transport
@@ -18,10 +18,32 @@ html(lang='en')
             , tryTransportsOnConnectTimeout: false 
         });
 
-        //- Simple connect event so we can see that we are connecting
+        //- Log our connection even and hide the disconnectMessage element in case 
+        //- we are reconnecting after an interuption
         socket.on('connect', function () { 
             console.log('Connected! Oh hai!');
+            $('#disconnectMessage').hide();
         }); 
+
+        //- This method checks to see if we are connected, if not, tell socket.io to connect 
+        //- and reset a timeout to check again in 30 seconds.
+        tryConnect = function () {
+            if (!connected) {
+                console.log('Trying to reconnect...');
+                socket.connect();
+                clearTimeout(trying);
+                trying = setTimeout(tryConnect, 30000);
+            }
+        };
+
+        //- Handle disconnection by displaying a notice to the user and
+        //- setting a timer to try connecting in 500ms. 
+        socket.on('disconnect', function () {
+            console.log('Disconnected. Oh noes!');
+            connected = false;
+            trying = setTimeout(tryConnect, 500);
+            $('#disconnectMessage').show();
+        });
 
         //- Start the connection
         socket.connect();
@@ -33,3 +55,5 @@ html(lang='en')
       | This is version:
     //- Render the version variable
     h1 #{version}
+    #disconnectMessage(style: 'display: none') 
+      h2 DISCONNECTED!
